<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="gr.unipi.androidsampleapp.ImplicitIntentsActivity">

    <EditText
        android:id="@+id/txt_implicit_intents_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/implicit_intent_url_hint"
        android:text="@string/implicit_intent_url_hint"
        android:imeOptions="actionGo"
        android:inputType="textUri" />

    <Button
        android:id="@+id/btn_implicit_intents_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/implicit_intent_url_btn" />

    <EditText
        android:id="@+id/txt_implicit_intents_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/implicit_intent_phone_hint"
        android:text="@string/implicit_intent_phone_hint"
        android:imeOptions="actionGo"
        android:inputType="phone" />

    <Button
        android:id="@+id/btn_implicit_intents_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/implicit_intent_phone_btn" />
</LinearLayout>
