<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gr.unipi.androidsampleapp.MainActivity">

    <TextView
        android:id="@+id/txt_main_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_hello_world"
        android:textSize="@dimen/main_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_main_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_margin"
        android:onClick="changeColorToRed"
        android:text="@string/main_color_red"
        android:textColor="@color/colorUnipiRed"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_main_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_margin"
        android:text="@string/main_color_blue"
        android:textColor="@color/colorUnipiBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_main_go_implicit_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToImplicitIntents"
        android:text="@string/main_implicit_intent_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
